# DiscordConnections

./: .gitignore  README.md  pyproject.toml
discord_connections/: __init__.py  client.py  exceptions.py  register_schema.py
discord_connections/datatypes/: __init__.py  base_metadata.py  exceptions.py  field_types.py  scopes.py  tokens.py
examples/: a_create_metadata.py  b_register_metadata_schema.py  c_create_server.py
src/discord_connections/: __init__.py  client.py  exceptions.py
src/discord_connections/datatypes/: __init__.py  metadata.py  scopes.py  tokens.py
tests/: conftest.py
tests/fixtures/: metadata.py
tests/test_functions/: test_metadata.py
tests/utils/: __init__.py
