[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "discord-connections"
dependencies = [
  "httpx~=0.25.2",

]
authors = [
  {name = "Dmitry Patrushev", email = "impda@mail.ru"},
]
maintainers = [
  {name = "Dmitry Patrushev", email = "impda@mail.ru"},
]
description = "Simple client for creating Discord Connections"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["discord", "linked roles", "connections", "api"]
#Homepage = "https://example.com"

[tool.hatch.version]
path = "src/discord_connections/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/discord_connections"]