[tool.poetry]
name = "discord-connections"
version = "0.1.1"
authors = [
  "Dmitry Patrushev <impda@mail.ru>"
]
maintainers = [
  "Dmitry Patrushev <impda@mail.ru>"
]
description = "API to simplify creation of Discord connections on Python"
readme = "README.md"
license = "MIT"
keywords = ["discord", "api", "connections", "linked roles"]
homepage = "https://github.com/imPDA/DiscordConnections"
packages = [
  { include = "discord_connections" }
]
exclude = [
  "examples",
  "tests"
]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
pydantic = "^2.6.3"
click = "^8.1.7"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
